// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem overwrite default role should set empty role 1`] = `
<li
  class="undefined-item"
>
  test
</li>
`;

exports[`MenuItem overwrite default role should set specific role 1`] = `
<li
  class="undefined-item"
  role="option"
>
  test
</li>
`;

exports[`MenuItem rest props can render all props to sub component 1`] = `
<ul
  class="rc-menu  rc-menu-root rc-menu-inline"
  role="menu"
  tabindex="0"
>
  <li
    class="rc-menu-item className rc-menu-item-active"
    data-whatever="whatever"
    role="menuitem"
    style="font-size: 20px; padding-left: 24px;"
    title="title"
  >
    1
  </li>
  <li
    class="rc-menu-submenu rc-menu-submenu-inline className"
    role="menuitem"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="rc-menu-submenu-title"
      style="padding-left: 24px;"
      title="title"
    >
      title
      <i
        class="rc-menu-submenu-arrow"
      />
    </div>
    <div />
  </li>
  <li
    class="className rc-menu-item-group"
    data-whatever="whatever"
    style="font-size: 20px;"
  >
    <div
      class="rc-menu-item-group-title"
      title="title"
    >
      title
    </div>
    <ul
      class="rc-menu-item-group-list"
    >
      <li
        class="rc-menu-item className"
        data-whatever="whatever"
        role="menuitem"
        style="font-size: 20px; padding-left: 24px;"
        title="title"
      >
        4
      </li>
    </ul>
  </li>
</ul>
`;
